fix visibilité toolbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,6 +117,9 @@
     height: 48px !important;
     min-height: 48px !important;
     padding: 0 8px 0 12px;
+    position: sticky;
+    top: 0;
+    z-index: 50;
   }
 
   .toolbar-logo {
